--- a/Conditional-Reminder-App-Info.plist
+++ b/Conditional-Reminder-App-Info.plist
@@ -2,16 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>xyz.playbyear.Conditional-Reminder-App</string>
+	</array>
 	<key>CFBundleGetInfoString</key>
 	<string></string>
 	<key>CFBundleIconFile</key>
 	<string></string>
 	<key>UIBackgroundModes</key>
 	<array>
-		<string>fetch</string>
-		<string>location</string>
 		<string>processing</string>
-		<string>remote-notification</string>
+		<string>location</string>
 	</array>
 </dict>
 </plist>
